fix(clay-css): Globals added `_globals-z-index.scss` to list z-index variables used in Bootstrap/ClayCSS
fix(clay-css): Globals Z Index added variables `$zindex-clay-range-input-form-control`, `$zindex-menubar-vertical-expand-md-collapse-mobile`, `$zindex-menubar-vertical-expand-lg-collapse-mobile`, `$zindex-pagination-link-focus`, `$zindex-pagination-link-active`, `$zindex-pagination-link-disabled`, `$zindex-panel-header-link-focus`

fixes #2339

--- a/packages/clay-css/src/scss/variables/_panels.scss
+++ b/packages/clay-css/src/scss/variables/_panels.scss
@@ -41,7 +41,7 @@ $panel-header-link: map-merge((
 	transition: border-color 0.1s ease#{','} border-radius 0.5s ease,
 	hover-color: inherit,
 	hover-text-decoration: $panel-header-link-hover-text-decoration,
-	focus-z-index: 1,
+	focus-z-index: $zindex-panel-header-link-focus,
 ), $panel-header-link);
 
 $panel-header-collapsed-link: () !default;
